05-kubernetes_eks/external-dns/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deployment-dns
  name: nginx-deployment-dns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-deployment-dns
  template:
    metadata:
      labels:
        app: nginx-deployment-dns
    spec:
      containers:
      - image: nginx:latest
        name: nginx
