05-kubernetes_eks/external-dns/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-dns
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx-deployment-dns
